src/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap');


// overrides
$font-family-base: 'Comfortaa';

@import '/node_modules/bootstrap/scss/bootstrap.scss';

.pastel {
    background-color: rgb(230, 243, 230);
}

.pastel-danger {
    background-color: rgb(224, 161, 153);
}

.content{
    margin-top: 20vh;
    margin-bottom: 30vh;
}

